--- a/leave_request_bot/leave_request_bot.csproj
+++ b/leave_request_bot/leave_request_bot.csproj
@@ -97,6 +97,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
+    <None Include="starts.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="users.csv">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
