--- a/leave_request_bot/App.config
+++ b/leave_request_bot/App.config
@@ -1,18 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
-    </startup>
-	<appSettings>
-		<!--
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
+  </startup>
+  <appSettings>
+    <!--
 
 		-->
-		<add key="calendarID" value="" />
-		<!--
+    <add key="calendarID" value="cbsinteractive.com_rpv5nbaapi6193eihuqg0ucvg0@group.calendar.google.com" />
+    <!--
 
 		-->
-		<add key="token" value="" />
-	</appSettings>
+    <add key="token" value="636654754:AAFb1-6pGF2jHBGjsSfyjAd2tTDdkwZRZ54" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
