--- a/leave_request_bot/packages.config
+++ b/leave_request_bot/packages.config
@@ -4,6 +4,7 @@
   <package id="Google.Apis.Auth" version="1.35.2" targetFramework="net461" />
   <package id="Google.Apis.Calendar.v3" version="1.35.2.1368" targetFramework="net461" />
   <package id="Google.Apis.Core" version="1.35.2" targetFramework="net461" />
+  <package id="HttpToSocks5Proxy" version="1.1.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
